--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -508,9 +508,6 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.invisible {
-  visibility: hidden;
-}
 .fixed {
   position: fixed;
 }
@@ -538,29 +535,33 @@ video {
 .top-0 {
   top: 0px;
 }
+.bottom-0 {
+  bottom: 0px;
+}
 .left-0 {
   left: 0px;
 }
 .right-0 {
   right: 0px;
 }
-.top-1 {
-  top: 0.25rem;
-}
-.top-2 {
-  top: 0.5rem;
-}
-.top-3 {
-  top: 0.75rem;
-}
-.bottom-0 {
-  bottom: 0px;
-}
 .top-16 {
   top: 4rem;
 }
+.isolate {
+  isolation: isolate;
+}
 .z-\[9999\] {
   z-index: 9999;
+}
+.z-\[1\] {
+  z-index: 1;
+}
+.z-\[2\] {
+  z-index: 2;
+}
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -569,6 +570,12 @@ video {
 .-mx-5 {
   margin-left: -1.25rem;
   margin-right: -1.25rem;
+}
+.-mb-\[2px\] {
+  margin-bottom: -2px;
+}
+.mt-5 {
+  margin-top: 1.25rem;
 }
 .mb-5 {
   margin-bottom: 1.25rem;
@@ -582,8 +589,14 @@ video {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.-ml-1 {
+  margin-left: -0.25rem;
+}
 .-mt-48 {
   margin-top: -12rem;
+}
+.-ml-3 {
+  margin-left: -0.75rem;
 }
 .ml-4 {
   margin-left: 1rem;
@@ -593,6 +606,12 @@ video {
 }
 .mt-3 {
   margin-top: 0.75rem;
+}
+.mt-16 {
+  margin-top: 4rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .\!mt-2 {
   margin-top: 0.5rem !important;
@@ -609,33 +628,6 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
-.-ml-3 {
-  margin-left: -0.75rem;
-}
-.mt-20 {
-  margin-top: 5rem;
-}
-.mt-16 {
-  margin-top: 4rem;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-.mt-\[2px\] {
-  margin-top: 2px;
-}
-.mt-5 {
-  margin-top: 1.25rem;
-}
-.-ml-2 {
-  margin-left: -0.5rem;
-}
-.-ml-1 {
-  margin-left: -0.25rem;
-}
 .block {
   display: block;
 }
@@ -651,6 +643,9 @@ video {
 .h-full {
   height: 100%;
 }
+.h-7 {
+  height: 1.75rem;
+}
 .h-\[44px\] {
   height: 44px;
 }
@@ -658,9 +653,6 @@ video {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-}
-.h-7 {
-  height: 1.75rem;
 }
 .h-3 {
   height: 0.75rem;
@@ -680,14 +672,14 @@ video {
 .h-\[10px\] {
   height: 10px;
 }
-.h-2 {
-  height: 0.5rem;
-}
 .h-8 {
   height: 2rem;
 }
 .h-1 {
   height: 0.25rem;
+}
+.h-2 {
+  height: 0.5rem;
 }
 .max-h-28 {
   max-height: 7rem;
@@ -698,14 +690,17 @@ video {
 .min-h-full {
   min-height: 100%;
 }
-.w-\[44px\] {
-  width: 44px;
+.w-7 {
+  width: 1.75rem;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .w-full {
   width: 100%;
 }
-.w-7 {
-  width: 1.75rem;
+.w-\[44px\] {
+  width: 44px;
 }
 .w-3 {
   width: 0.75rem;
@@ -719,28 +714,25 @@ video {
 .w-5 {
   width: 1.25rem;
 }
+.w-\[10px\] {
+  width: 10px;
+}
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-}
-.w-\[300px\] {
-  width: 300px;
-}
-.w-\[10px\] {
-  width: 10px;
-}
-.w-2 {
-  width: 0.5rem;
-}
-.w-auto {
-  width: auto;
 }
 .w-8 {
   width: 2rem;
 }
 .w-1 {
   width: 0.25rem;
+}
+.w-2 {
+  width: 0.5rem;
+}
+.w-auto {
+  width: auto;
 }
 .min-w-fit {
   min-width: -webkit-fit-content;
@@ -816,11 +808,18 @@ video {
 .gap-y-3 {
   row-gap: 0.75rem;
 }
-.gap-y-2 {
-  row-gap: 0.5rem;
-}
 .gap-y-1 {
   row-gap: 0.25rem;
+}
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -832,11 +831,6 @@ video {
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -846,6 +840,9 @@ video {
 .whitespace-pre-wrap {
   white-space: pre-wrap;
 }
+.rounded-full {
+  border-radius: 9999px;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -854,9 +851,6 @@ video {
 }
 .rounded-md {
   border-radius: 0.375rem;
-}
-.rounded-full {
-  border-radius: 9999px;
 }
 .rounded-xl {
   border-radius: 0.75rem;
@@ -878,20 +872,21 @@ video {
 .border {
   border-width: 1px;
 }
+.border-b {
+  border-bottom-width: 1px;
+}
 .border-t {
   border-top-width: 1px;
+}
+.border-b-\[6px\] {
+  border-bottom-width: 6px;
 }
 .border-t-2 {
   border-top-width: 2px;
 }
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-.border-b-8 {
-  border-bottom-width: 8px;
-}
-.border-b-\[6px\] {
-  border-bottom-width: 6px;
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 42% / var(--tw-border-opacity));
 }
 .border-blue-400 {
   --tw-border-opacity: 1;
@@ -909,25 +904,25 @@ video {
   --tw-border-opacity: 1;
   border-color: hsl(250 38% 46% / var(--tw-border-opacity));
 }
-.border-gray-200 {
+.border-black-100 {
   --tw-border-opacity: 1;
-  border-color: hsl(0 0% 42% / var(--tw-border-opacity));
+  border-color: hsl(0 0% 13% / var(--tw-border-opacity));
 }
 .border-green {
   --tw-border-opacity: 1;
   border-color: hsl(129 60% 47% / var(--tw-border-opacity));
 }
-.border-black-100 {
-  --tw-border-opacity: 1;
-  border-color: hsl(0 0% 13% / var(--tw-border-opacity));
+.bg-black-100 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 13% / var(--tw-bg-opacity));
+}
+.bg-purple {
+  --tw-bg-opacity: 1;
+  background-color: hsl(250 38% 46% / var(--tw-bg-opacity));
 }
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-.bg-black-100 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 13% / var(--tw-bg-opacity));
 }
 .bg-blue-500 {
   --tw-bg-opacity: 1;
@@ -936,10 +931,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
-}
-.bg-purple {
-  --tw-bg-opacity: 1;
-  background-color: hsl(250 38% 46% / var(--tw-bg-opacity));
 }
 .bg-black-200 {
   --tw-bg-opacity: 1;
@@ -965,10 +956,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: hsl(1 96% 65% / var(--tw-bg-opacity));
 }
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
 .bg-lime-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 252 203 / var(--tw-bg-opacity));
@@ -993,14 +980,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
-.bg-orange-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
-}
-.bg-lime-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(190 242 100 / var(--tw-bg-opacity));
-}
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
@@ -1019,14 +998,20 @@ video {
 .fill-white {
   fill: hsl(0, 0%, 100%);
 }
+.stroke-blue-800 {
+  stroke: #1e40af;
+}
+.stroke-cyan-700 {
+  stroke: #0e7490;
+}
+.stroke-green {
+  stroke: hsl(129, 60%, 47%);
+}
 .stroke-white {
   stroke: hsl(0, 0%, 100%);
 }
 .stroke-red {
   stroke: hsl(1, 96%, 65%);
-}
-.stroke-gray-200 {
-  stroke: hsl(0, 0%, 42%);
 }
 .stroke-\[3\] {
   stroke-width: 3;
@@ -1038,14 +1023,14 @@ video {
   -o-object-fit: contain;
      object-fit: contain;
 }
+.p-1 {
+  padding: 0.25rem;
+}
 .p-5 {
   padding: 1.25rem;
 }
 .p-\[6px\] {
   padding: 6px;
-}
-.p-1 {
-  padding: 0.25rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1056,9 +1041,21 @@ video {
 .p-3 {
   padding: 0.75rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-\[6px\] {
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1068,17 +1065,13 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1087,10 +1080,6 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -1108,11 +1097,17 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.pt-5 {
+  padding-top: 1.25rem;
+}
 .pb-3 {
   padding-bottom: 0.75rem;
 }
-.pt-5 {
-  padding-top: 1.25rem;
+.pr-6 {
+  padding-right: 1.5rem;
+}
+.pr-\[1px\] {
+  padding-right: 1px;
 }
 .pt-9 {
   padding-top: 2.25rem;
@@ -1129,11 +1124,14 @@ video {
 .pb-4 {
   padding-bottom: 1rem;
 }
-.pt-10 {
-  padding-top: 2.5rem;
+.pt-2 {
+  padding-top: 0.5rem;
 }
 .pt-\[68px\] {
   padding-top: 68px;
+}
+.pr-\[2px\] {
+  padding-right: 2px;
 }
 .pt-20 {
   padding-top: 5rem;
@@ -1168,12 +1166,6 @@ video {
 .pb-5 {
   padding-bottom: 1.25rem;
 }
-.pt-0 {
-  padding-top: 0px;
-}
-.pt-2 {
-  padding-top: 0.5rem;
-}
 .text-left {
   text-align: left;
 }
@@ -1186,17 +1178,17 @@ video {
 .font-inter {
   font-family: Inter, sans-serif;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .text-sm {
   font-size: 0.875rem;
@@ -1206,25 +1198,19 @@ video {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-\[32px\] {
-  font-size: 32px;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.font-medium {
-  font-weight: 500;
-}
 .font-semibold {
   font-weight: 600;
 }
-.font-bold {
-  font-weight: 700;
+.font-medium {
+  font-weight: 500;
 }
 .font-normal {
   font-weight: 400;
@@ -1266,14 +1252,6 @@ video {
   --tw-text-opacity: 1;
   color: hsl(1 96% 65% / var(--tw-text-opacity));
 }
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
 .text-green {
   --tw-text-opacity: 1;
   color: hsl(129 60% 47% / var(--tw-text-opacity));
@@ -1285,9 +1263,6 @@ video {
 .text-slate-700 {
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
-}
-.text-transparent {
-  color: transparent;
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1344,25 +1319,14 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .duration-100 {
   transition-duration: 100ms;
-}
-.duration-200 {
-  transition-duration: 200ms;
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.will-change-transform {
-  will-change: transform;
 }
 .placeholder\:text-gray-200::-moz-placeholder {
   --tw-text-opacity: 1;
@@ -1372,9 +1336,20 @@ video {
   --tw-text-opacity: 1;
   color: hsl(0 0% 42% / var(--tw-text-opacity));
 }
-.odd\:bg-black-200:nth-child(odd) {
+.even\:bg-black-200:nth-child(even) {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 9% / var(--tw-bg-opacity));
+}
+.first-of-type\:rounded-t-lg:first-of-type {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.last-of-type\:rounded-b-lg:last-of-type {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+.last-of-type\:border-b-0:last-of-type {
+  border-bottom-width: 0px;
 }
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
@@ -1383,10 +1358,6 @@ video {
 .hover\:bg-black-100:hover {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 13% / var(--tw-bg-opacity));
-}
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
 }
 .hover\:opacity-90:hover {
   opacity: 0.9;
@@ -1406,15 +1377,6 @@ video {
 .focus-visible\:\!outline-none:focus-visible {
   outline: 2px solid transparent !important;
   outline-offset: 2px !important;
-}
-.focus-visible\:outline:focus-visible {
-  outline-style: solid;
-}
-.focus-visible\:outline-2:focus-visible {
-  outline-width: 2px;
-}
-.focus-visible\:outline-purple:focus-visible {
-  outline-color: hsl(250, 38%, 46%);
 }
 .active\:opacity-50:active {
   opacity: 0.5;
